Add stripe to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "3.5.1",
     "jade": "*",
-    "orchestrate": "0.0.9"
+    "orchestrate": "0.0.9",
+    "stripe": "~2.4.4"
   }
 }
